pdflatex/native-build/texk/web2c/web2c/web2c-parser.output
State 397 conflicts: 1 shift/reduce
State 463 conflicts: 1 shift/reduce
State 485 conflicts: 1 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 $@1: ε

    2 $@2: ε

    3 PROGRAM: DEFS PROGRAM_HEAD $@1 LABEL_DEC_PART CONST_DEC_PART TYPE_DEC_PART VAR_DEC_PART $@2 P_F_DEC_PART BODY

    4 DEFS: ε
    5     | DEFS DEF

    6 DEF: define_tok field_tok undef_id_tok ';'
    7    | define_tok function_tok undef_id_tok ';'
    8    | define_tok const_tok undef_id_tok ';'
    9    | define_tok function_tok undef_id_tok '(' ')' ';'
   10    | define_tok procedure_tok undef_id_tok ';'
   11    | define_tok procedure_tok undef_id_tok '(' ')' ';'
   12    | define_tok type_tok undef_id_tok ';'
   13    | define_tok type_tok undef_id_tok '=' SUBRANGE_TYPE ';'
   14    | define_tok var_tok undef_id_tok ';'

   15 PROGRAM_HEAD: program_tok undef_id_tok PROGRAM_FILE_PART ';'

   16 PROGRAM_FILE_PART: '(' PROGRAM_FILE_LIST ')'
   17                  | ε

   18 PROGRAM_FILE_LIST: PROGRAM_FILE
   19                  | PROGRAM_FILE_LIST ',' PROGRAM_FILE

   20 PROGRAM_FILE: const_id_tok
   21             | undef_id_tok

   22 $@3: ε

   23 $@4: ε

   24 $@5: ε

   25 BLOCK: $@3 LABEL_DEC_PART CONST_DEC_PART TYPE_DEC_PART $@4 VAR_DEC_PART $@5 STAT_PART

   26 LABEL_DEC_PART: ε

   27 $@6: ε

   28 LABEL_DEC_PART: label_tok $@6 LABEL_LIST ';'

   29 LABEL_LIST: LABEL
   30           | LABEL_LIST ',' LABEL

   31 LABEL: i_num_tok

   32 CONST_DEC_PART: ε
   33               | const_tok CONST_DEC_LIST

   34 CONST_DEC_LIST: CONST_DEC
   35               | CONST_DEC_LIST CONST_DEC

   36 $@7: ε

   37 $@8: ε

   38 $@9: ε

   39 $@10: ε

   40 CONST_DEC: $@7 undef_id_tok $@8 '=' $@9 CONSTANT_EXPRESS $@10 ';'

   41 CONSTANT: i_num_tok
   42         | r_num_tok
   43         | STRING
   44         | CONSTANT_ID

   45 CONSTANT_EXPRESS: UNARY_OP CONSTANT_EXPRESS

   46 $@11: ε

   47 CONSTANT_EXPRESS: CONSTANT_EXPRESS '+' $@11 CONSTANT_EXPRESS

   48 $@12: ε

   49 CONSTANT_EXPRESS: CONSTANT_EXPRESS '-' $@12 CONSTANT_EXPRESS

   50 $@13: ε

   51 CONSTANT_EXPRESS: CONSTANT_EXPRESS '*' $@13 CONSTANT_EXPRESS

   52 $@14: ε

   53 CONSTANT_EXPRESS: CONSTANT_EXPRESS div_tok $@14 CONSTANT_EXPRESS

   54 $@15: ε

   55 CONSTANT_EXPRESS: CONSTANT_EXPRESS '=' $@15 CONSTANT_EXPRESS

   56 $@16: ε

   57 CONSTANT_EXPRESS: CONSTANT_EXPRESS not_eq_tok $@16 CONSTANT_EXPRESS

   58 $@17: ε

   59 CONSTANT_EXPRESS: CONSTANT_EXPRESS mod_tok $@17 CONSTANT_EXPRESS

   60 $@18: ε

   61 CONSTANT_EXPRESS: CONSTANT_EXPRESS '<' $@18 CONSTANT_EXPRESS

   62 $@19: ε

   63 CONSTANT_EXPRESS: CONSTANT_EXPRESS '>' $@19 CONSTANT_EXPRESS

   64 $@20: ε

   65 CONSTANT_EXPRESS: CONSTANT_EXPRESS less_eq_tok $@20 CONSTANT_EXPRESS

   66 $@21: ε

   67 CONSTANT_EXPRESS: CONSTANT_EXPRESS great_eq_tok $@21 CONSTANT_EXPRESS

   68 $@22: ε

   69 CONSTANT_EXPRESS: CONSTANT_EXPRESS and_tok $@22 CONSTANT_EXPRESS

   70 $@23: ε

   71 CONSTANT_EXPRESS: CONSTANT_EXPRESS or_tok $@23 CONSTANT_EXPRESS

   72 $@24: ε

   73 CONSTANT_EXPRESS: CONSTANT_EXPRESS '/' $@24 CONSTANT_EXPRESS
   74                 | CONST_FACTOR

   75 $@25: ε

   76 CONST_FACTOR: '(' $@25 CONSTANT_EXPRESS ')'
   77             | CONSTANT

   78 STRING: string_literal_tok
   79       | single_char_tok

   80 CONSTANT_ID: const_id_tok

   81 TYPE_DEC_PART: ε
   82              | type_tok TYPE_DEF_LIST

   83 TYPE_DEF_LIST: TYPE_DEF
   84              | TYPE_DEF_LIST TYPE_DEF

   85 $@26: ε

   86 $@27: ε

   87 $@28: ε

   88 TYPE_DEF: $@26 undef_id_tok $@27 '=' $@28 TYPE ';'

   89 TYPE: SIMPLE_TYPE
   90     | STRUCTURED_TYPE

   91 SIMPLE_TYPE: SUBRANGE_TYPE
   92            | TYPE_ID

   93 SUBRANGE_TYPE: SUBRANGE_CONSTANT two_dots_tok SUBRANGE_CONSTANT

   94 POSSIBLE_PLUS: ε
   95              | unary_plus_tok

   96 SUBRANGE_CONSTANT: POSSIBLE_PLUS i_num_tok
   97                  | const_id_tok
   98                  | var_id_tok
   99                  | undef_id_tok

  100 TYPE_ID: type_id_tok

  101 STRUCTURED_TYPE: ARRAY_TYPE
  102                | RECORD_TYPE
  103                | FILE_TYPE
  104                | POINTER_TYPE

  105 POINTER_TYPE: '^' type_id_tok

  106 ARRAY_TYPE: array_tok '[' INDEX_TYPE ']' of_tok COMPONENT_TYPE
  107           | array_tok '[' INDEX_TYPE ',' INDEX_TYPE ']' of_tok COMPONENT_TYPE

  108 INDEX_TYPE: SUBRANGE_TYPE
  109           | type_id_tok

  110 COMPONENT_TYPE: TYPE

  111 $@29: ε

  112 RECORD_TYPE: record_tok $@29 FIELD_LIST end_tok

  113 FIELD_LIST: RECORD_SECTION
  114           | FIELD_LIST ';' RECORD_SECTION

  115 $@30: ε

  116 $@31: ε

  117 RECORD_SECTION: $@30 FIELD_ID_LIST ':' $@31 TYPE
  118               | ε

  119 FIELD_ID_LIST: FIELD_ID
  120              | FIELD_ID_LIST ',' FIELD_ID

  121 FIELD_ID: undef_id_tok
  122         | field_id_tok

  123 $@32: ε

  124 FILE_TYPE: file_tok of_tok $@32 TYPE

  125 VAR_DEC_PART: ε
  126             | var_tok VAR_DEC_LIST

  127 VAR_DEC_LIST: VAR_DEC
  128             | VAR_DEC_LIST VAR_DEC

  129 $@33: ε

  130 $@34: ε

  131 VAR_DEC: $@33 VAR_ID_DEC_LIST ':' $@34 TYPE ';'

  132 VAR_ID_DEC_LIST: VAR_ID
  133                | VAR_ID_DEC_LIST ',' VAR_ID

  134 VAR_ID: undef_id_tok
  135       | var_id_tok
  136       | field_id_tok

  137 BODY: ε

  138 $@35: ε

  139 BODY: begin_tok $@35 STAT_LIST end_tok '.'

  140 P_F_DEC_PART: P_F_DEC
  141             | P_F_DEC_PART P_F_DEC

  142 P_F_DEC: PROCEDURE_DEC ';'
  143        | FUNCTION_DEC ';'

  144 PROCEDURE_DEC: PROCEDURE_HEAD BLOCK

  145 PROCEDURE_TOK: procedure_tok

  146 $@36: ε

  147 PROCEDURE_TOK: noreturn_tok $@36 procedure_tok

  148 $@37: ε

  149 PROCEDURE_HEAD: PROCEDURE_TOK undef_id_tok $@37 PARAM ';'

  150 $@38: ε

  151 PROCEDURE_HEAD: procedure_tok DECLARED_PROC $@38 PARAM ';'

  152 PARAM: ε

  153 $@39: ε

  154 PARAM: '(' $@39 FORM_PAR_SEC_L ')'

  155 FORM_PAR_SEC_L: FORM_PAR_SEC
  156               | FORM_PAR_SEC_L ';' FORM_PAR_SEC

  157 $@40: ε

  158 FORM_PAR_SEC1: $@40 VAR_ID_DEC_LIST ':' type_id_tok

  159 $@41: ε

  160 FORM_PAR_SEC: $@41 FORM_PAR_SEC1

  161 $@42: ε

  162 FORM_PAR_SEC: var_tok $@42 FORM_PAR_SEC1

  163 DECLARED_PROC: proc_id_tok
  164              | proc_param_tok

  165 FUNCTION_DEC: FUNCTION_HEAD BLOCK

  166 $@43: ε

  167 $@44: ε

  168 $@45: ε

  169 FUNCTION_HEAD: function_tok undef_id_tok $@43 PARAM ':' $@44 RESULT_TYPE $@45 ';'

  170 $@46: ε

  171 $@47: ε

  172 $@48: ε

  173 FUNCTION_HEAD: function_tok DECLARED_FUN $@46 PARAM ':' $@47 RESULT_TYPE $@48 ';'

  174 DECLARED_FUN: fun_id_tok
  175             | fun_param_tok

  176 RESULT_TYPE: TYPE

  177 STAT_PART: begin_tok STAT_LIST end_tok

  178 $@49: ε

  179 COMPOUND_STAT: begin_tok $@49 STAT_LIST end_tok

  180 STAT_LIST: STATEMENT
  181          | STAT_LIST ';' STATEMENT

  182 STATEMENT: UNLAB_STAT
  183          | S_LABEL ':' UNLAB_STAT

  184 S_LABEL: i_num_tok

  185 UNLAB_STAT: SIMPLE_STAT
  186           | STRUCT_STAT

  187 SIMPLE_STAT: ASSIGN_STAT
  188            | PROC_STAT
  189            | GO_TO_STAT
  190            | EMPTY_STAT
  191            | break_tok

  192 $@50: ε

  193 ASSIGN_STAT: VARIABLE assign_tok $@50 EXPRESS

  194 $@51: ε

  195 ASSIGN_STAT: FUNC_ID_AS assign_tok $@51 EXPRESS

  196 @52: ε

  197 VARIABLE: var_id_tok @52 VAR_DESIG_LIST
  198         | var_id_tok

  199 FUNC_ID_AS: fun_id_tok
  200           | fun_param_tok

  201 VAR_DESIG_LIST: VAR_DESIG
  202               | VAR_DESIG_LIST VAR_DESIG

  203 $@53: ε

  204 VAR_DESIG: '[' $@53 EXPRESS VAR_DESIG1
  205          | '.' field_id_tok
  206          | '.' hhb0_tok
  207          | '.' hhb1_tok

  208 VAR_DESIG1: ']'

  209 $@54: ε

  210 VAR_DESIG1: ',' $@54 EXPRESS ']'

  211 EXPRESS: UNARY_OP EXPRESS

  212 $@55: ε

  213 EXPRESS: EXPRESS '+' $@55 EXPRESS

  214 $@56: ε

  215 EXPRESS: EXPRESS '-' $@56 EXPRESS

  216 $@57: ε

  217 EXPRESS: EXPRESS '*' $@57 EXPRESS

  218 $@58: ε

  219 EXPRESS: EXPRESS div_tok $@58 EXPRESS

  220 $@59: ε

  221 EXPRESS: EXPRESS '=' $@59 EXPRESS

  222 $@60: ε

  223 EXPRESS: EXPRESS not_eq_tok $@60 EXPRESS

  224 $@61: ε

  225 EXPRESS: EXPRESS mod_tok $@61 EXPRESS

  226 $@62: ε

  227 EXPRESS: EXPRESS '<' $@62 EXPRESS

  228 $@63: ε

  229 EXPRESS: EXPRESS '>' $@63 EXPRESS

  230 $@64: ε

  231 EXPRESS: EXPRESS less_eq_tok $@64 EXPRESS

  232 $@65: ε

  233 EXPRESS: EXPRESS great_eq_tok $@65 EXPRESS

  234 $@66: ε

  235 EXPRESS: EXPRESS and_tok $@66 EXPRESS

  236 $@67: ε

  237 EXPRESS: EXPRESS or_tok $@67 EXPRESS

  238 $@68: ε

  239 EXPRESS: EXPRESS '/' $@68 EXPRESS
  240        | FACTOR

  241 UNARY_OP: unary_plus_tok
  242         | unary_minus_tok
  243         | not_tok

  244 $@69: ε

  245 FACTOR: '(' $@69 EXPRESS ')'
  246       | VARIABLE
  247       | CONSTANT
  248       | fun_id_tok

  249 $@70: ε

  250 FACTOR: fun_param_tok $@70 PARAM_LIST

  251 $@71: ε

  252 PARAM_LIST: '(' $@71 ACTUAL_PARAM_L ')'

  253 ACTUAL_PARAM_L: ACTUAL_PARAM

  254 $@72: ε

  255 ACTUAL_PARAM_L: ACTUAL_PARAM_L ',' $@72 ACTUAL_PARAM

  256 ACTUAL_PARAM: EXPRESS WIDTH_FIELD
  257             | type_id_tok

  258 WIDTH_FIELD: ':' i_num_tok
  259            | ε

  260 PROC_STAT: proc_id_tok
  261          | undef_id_tok

  262 $@73: ε

  263 PROC_STAT: proc_param_tok $@73 PARAM_LIST

  264 GO_TO_STAT: goto_tok i_num_tok

  265 EMPTY_STAT: ε

  266 STRUCT_STAT: COMPOUND_STAT
  267            | CONDIT_STAT
  268            | REPETIT_STAT

  269 CONDIT_STAT: IF_STATEMENT
  270            | CASE_STATEMENT

  271 $@74: ε

  272 IF_STATEMENT: if_tok $@74 IF_THEN_ELSE_STAT

  273 $@75: ε

  274 IF_THEN_ELSE_STAT: EXPRESS $@75 THEN_ELSE_STAT

  275 $@76: ε

  276 THEN_ELSE_STAT: then_tok $@76 STATEMENT ELSE_STAT

  277 $@77: ε

  278 $@78: ε

  279 THEN_ELSE_STAT: then_tok if_tok $@77 IF_THEN_ELSE_STAT $@78 ELSE_STAT

  280 ELSE_STAT: ε

  281 $@79: ε

  282 ELSE_STAT: else_tok $@79 STATEMENT

  283 $@80: ε

  284 $@81: ε

  285 CASE_STATEMENT: case_tok $@80 EXPRESS of_tok $@81 CASE_EL_LIST END_CASE

  286 CASE_EL_LIST: CASE_ELEMENT
  287             | CASE_EL_LIST ';' CASE_ELEMENT

  288 CASE_ELEMENT: CASE_LAB_LIST ':' UNLAB_STAT

  289 CASE_LAB_LIST: CASE_LAB
  290              | CASE_LAB_LIST ',' CASE_LAB

  291 CASE_LAB: i_num_tok
  292         | others_tok

  293 END_CASE: end_tok
  294         | ';' end_tok

  295 REPETIT_STAT: WHILE_STATEMENT
  296             | REP_STATEMENT
  297             | FOR_STATEMENT

  298 $@82: ε

  299 $@83: ε

  300 WHILE_STATEMENT: while_tok $@82 EXPRESS $@83 do_tok STATEMENT

  301 $@84: ε

  302 $@85: ε

  303 REP_STATEMENT: repeat_tok $@84 STAT_LIST until_tok $@85 EXPRESS

  304 $@86: ε

  305 $@87: ε

  306 $@88: ε

  307 FOR_STATEMENT: for_tok $@86 CONTROL_VAR assign_tok $@87 FOR_LIST do_tok $@88 STATEMENT

  308 CONTROL_VAR: var_id_tok

  309 $@89: ε

  310 $@90: ε

  311 FOR_LIST: EXPRESS $@89 to_tok $@90 EXPRESS

  312 $@91: ε

  313 $@92: ε

  314 FOR_LIST: EXPRESS $@91 downto_tok $@92 EXPRESS


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 9 11 16 76 154 245 252
    ')' (41) 9 11 16 76 154 245 252
    '*' (42) 51 217
    '+' (43) 47 213
    ',' (44) 19 30 107 120 133 210 255 290
    '-' (45) 49 215
    '.' (46) 139 205 206 207
    '/' (47) 73 239
    ':' (58) 117 131 158 169 173 183 258 288
    ';' (59) 6 7 8 9 10 11 12 13 14 15 28 40 88 114 131 142 143 149 151 156 169 173 181 287 294
    '<' (60) 61 227
    '=' (61) 13 40 55 88 221
    '>' (62) 63 229
    '[' (91) 106 107 204
    ']' (93) 106 107 208 210
    '^' (94) 105
    error (256)
    array_tok (258) 106 107
    begin_tok (259) 139 177 179
    case_tok (260) 285
    const_tok (261) 8 33
    do_tok (262) 300 307
    downto_tok (263) 314
    else_tok (264) 282
    end_tok (265) 112 139 177 179 293 294
    file_tok (266) 124
    for_tok (267) 307
    function_tok (268) 7 9 169 173
    goto_tok (269) 264
    if_tok (270) 272 279
    label_tok (271) 28
    of_tok (272) 106 107 124 285
    procedure_tok (273) 10 11 145 147 151
    program_tok (274) 15
    record_tok (275) 112
    repeat_tok (276) 303
    then_tok (277) 276 279
    to_tok (278) 311
    type_tok (279) 12 13 82
    until_tok (280) 303
    var_tok (281) 14 126 162
    while_tok (282) 300
    noreturn_tok (283) 147
    others_tok (284) 292
    r_num_tok (285) 42
    i_num_tok (286) 31 41 96 184 258 264 291
    string_literal_tok (287) 78
    single_char_tok (288) 79
    assign_tok (289) 193 195 307
    two_dots_tok (290) 93
    undef_id_tok (291) 6 7 8 9 10 11 12 13 14 15 21 40 88 99 121 134 149 169 261
    var_id_tok (292) 98 135 197 198 308
    proc_id_tok (293) 163 260
    proc_param_tok (294) 164 263
    fun_id_tok (295) 174 199 248
    fun_param_tok (296) 175 200 250
    const_id_tok (297) 20 80 97
    type_id_tok (298) 100 105 109 158 257
    hhb0_tok (299) 206
    hhb1_tok (300) 207
    field_id_tok (301) 122 136 205
    define_tok (302) 6 7 8 9 10 11 12 13 14
    field_tok (303) 6
    break_tok (304) 191
    not_eq_tok (305) 57 223
    less_eq_tok (306) 65 231
    great_eq_tok (307) 67 233
    or_tok (308) 71 237
    unary_plus_tok (309) 95 241
    unary_minus_tok (310) 242
    div_tok (311) 53 219
    mod_tok (312) 59 225
    and_tok (313) 69 235
    not_tok (314) 243


Nonterminals, with rules where they appear

    $accept (76)
        on left: 0
    PROGRAM (77)
        on left: 3
        on right: 0
    $@1 (78)
        on left: 1
        on right: 3
    $@2 (79)
        on left: 2
        on right: 3
    DEFS (80)
        on left: 4 5
        on right: 3 5
    DEF (81)
        on left: 6 7 8 9 10 11 12 13 14
        on right: 5
    PROGRAM_HEAD (82)
        on left: 15
        on right: 3
    PROGRAM_FILE_PART (83)
        on left: 16 17
        on right: 15
    PROGRAM_FILE_LIST (84)
        on left: 18 19
        on right: 16 19
    PROGRAM_FILE (85)
        on left: 20 21
        on right: 18 19
    BLOCK (86)
        on left: 25
        on right: 144 165
    $@3 (87)
        on left: 22
        on right: 25
    $@4 (88)
        on left: 23
        on right: 25
    $@5 (89)
        on left: 24
        on right: 25
    LABEL_DEC_PART (90)
        on left: 26 28
        on right: 3 25
    $@6 (91)
        on left: 27
        on right: 28
    LABEL_LIST (92)
        on left: 29 30
        on right: 28 30
    LABEL (93)
        on left: 31
        on right: 29 30
    CONST_DEC_PART (94)
        on left: 32 33
        on right: 3 25
    CONST_DEC_LIST (95)
        on left: 34 35
        on right: 33 35
    CONST_DEC (96)
        on left: 40
        on right: 34 35
    $@7 (97)
        on left: 36
        on right: 40
    $@8 (98)
        on left: 37
        on right: 40
    $@9 (99)
        on left: 38
        on right: 40
    $@10 (100)
        on left: 39
        on right: 40
    CONSTANT (101)
        on left: 41 42 43 44
        on right: 77 247
    CONSTANT_EXPRESS (102)
        on left: 45 47 49 51 53 55 57 59 61 63 65 67 69 71 73 74
        on right: 40 45 47 49 51 53 55 57 59 61 63 65 67 69 71 73 76
    $@11 (103)
        on left: 46
        on right: 47
    $@12 (104)
        on left: 48
        on right: 49
    $@13 (105)
        on left: 50
        on right: 51
    $@14 (106)
        on left: 52
        on right: 53
    $@15 (107)
        on left: 54
        on right: 55
    $@16 (108)
        on left: 56
        on right: 57
    $@17 (109)
        on left: 58
        on right: 59
    $@18 (110)
        on left: 60
        on right: 61
    $@19 (111)
        on left: 62
        on right: 63
    $@20 (112)
        on left: 64
        on right: 65
    $@21 (113)
        on left: 66
        on right: 67
    $@22 (114)
        on left: 68
        on right: 69
    $@23 (115)
        on left: 70
        on right: 71
    $@24 (116)
        on left: 72
        on right: 73
    CONST_FACTOR (117)
        on left: 76 77
        on right: 74
    $@25 (118)
        on left: 75
        on right: 76
    STRING (119)
        on left: 78 79
        on right: 43
    CONSTANT_ID (120)
        on left: 80
        on right: 44
    TYPE_DEC_PART (121)
        on left: 81 82
        on right: 3 25
    TYPE_DEF_LIST (122)
        on left: 83 84
        on right: 82 84
    TYPE_DEF (123)
        on left: 88
        on right: 83 84
    $@26 (124)
        on left: 85
        on right: 88
    $@27 (125)
        on left: 86
        on right: 88
    $@28 (126)
        on left: 87
        on right: 88
    TYPE (127)
        on left: 89 90
        on right: 88 110 117 124 131 176
    SIMPLE_TYPE (128)
        on left: 91 92
        on right: 89
    SUBRANGE_TYPE (129)
        on left: 93
        on right: 13 91 108
    POSSIBLE_PLUS (130)
        on left: 94 95
        on right: 96
    SUBRANGE_CONSTANT (131)
        on left: 96 97 98 99
        on right: 93
    TYPE_ID (132)
        on left: 100
        on right: 92
    STRUCTURED_TYPE (133)
        on left: 101 102 103 104
        on right: 90
    POINTER_TYPE (134)
        on left: 105
        on right: 104
    ARRAY_TYPE (135)
        on left: 106 107
        on right: 101
    INDEX_TYPE (136)
        on left: 108 109
        on right: 106 107
    COMPONENT_TYPE (137)
        on left: 110
        on right: 106 107
    RECORD_TYPE (138)
        on left: 112
        on right: 102
    $@29 (139)
        on left: 111
        on right: 112
    FIELD_LIST (140)
        on left: 113 114
        on right: 112 114
    RECORD_SECTION (141)
        on left: 117 118
        on right: 113 114
    $@30 (142)
        on left: 115
        on right: 117
    $@31 (143)
        on left: 116
        on right: 117
    FIELD_ID_LIST (144)
        on left: 119 120
        on right: 117 120
    FIELD_ID (145)
        on left: 121 122
        on right: 119 120
    FILE_TYPE (146)
        on left: 124
        on right: 103
    $@32 (147)
        on left: 123
        on right: 124
    VAR_DEC_PART (148)
        on left: 125 126
        on right: 3 25
    VAR_DEC_LIST (149)
        on left: 127 128
        on right: 126 128
    VAR_DEC (150)
        on left: 131
        on right: 127 128
    $@33 (151)
        on left: 129
        on right: 131
    $@34 (152)
        on left: 130
        on right: 131
    VAR_ID_DEC_LIST (153)
        on left: 132 133
        on right: 131 133 158
    VAR_ID (154)
        on left: 134 135 136
        on right: 132 133
    BODY (155)
        on left: 137 139
        on right: 3
    $@35 (156)
        on left: 138
        on right: 139
    P_F_DEC_PART (157)
        on left: 140 141
        on right: 3 141
    P_F_DEC (158)
        on left: 142 143
        on right: 140 141
    PROCEDURE_DEC (159)
        on left: 144
        on right: 142
    PROCEDURE_TOK (160)
        on left: 145 147
        on right: 149
    $@36 (161)
        on left: 146
        on right: 147
    PROCEDURE_HEAD (162)
        on left: 149 151
        on right: 144
    $@37 (163)
        on left: 148
        on right: 149
    $@38 (164)
        on left: 150
        on right: 151
    PARAM (165)
        on left: 152 154
        on right: 149 151 169 173
    $@39 (166)
        on left: 153
        on right: 154
    FORM_PAR_SEC_L (167)
        on left: 155 156
        on right: 154 156
    FORM_PAR_SEC1 (168)
        on left: 158
        on right: 160 162
    $@40 (169)
        on left: 157
        on right: 158
    FORM_PAR_SEC (170)
        on left: 160 162
        on right: 155 156
    $@41 (171)
        on left: 159
        on right: 160
    $@42 (172)
        on left: 161
        on right: 162
    DECLARED_PROC (173)
        on left: 163 164
        on right: 151
    FUNCTION_DEC (174)
        on left: 165
        on right: 143
    FUNCTION_HEAD (175)
        on left: 169 173
        on right: 165
    $@43 (176)
        on left: 166
        on right: 169
    $@44 (177)
        on left: 167
        on right: 169
    $@45 (178)
        on left: 168
        on right: 169
    $@46 (179)
        on left: 170
        on right: 173
    $@47 (180)
        on left: 171
        on right: 173
    $@48 (181)
        on left: 172
        on right: 173
    DECLARED_FUN (182)
        on left: 174 175
        on right: 173
    RESULT_TYPE (183)
        on left: 176
        on right: 169 173
    STAT_PART (184)
        on left: 177
        on right: 25
    COMPOUND_STAT (185)
        on left: 179
        on right: 266
    $@49 (186)
        on left: 178
        on right: 179
    STAT_LIST (187)
        on left: 180 181
        on right: 139 177 179 181 303
    STATEMENT (188)
        on left: 182 183
        on right: 180 181 276 282 300 307
    S_LABEL (189)
        on left: 184
        on right: 183
    UNLAB_STAT (190)
        on left: 185 186
        on right: 182 183 288
    SIMPLE_STAT (191)
        on left: 187 188 189 190 191
        on right: 185
    ASSIGN_STAT (192)
        on left: 193 195
        on right: 187
    $@50 (193)
        on left: 192
        on right: 193
    $@51 (194)
        on left: 194
        on right: 195
    VARIABLE (195)
        on left: 197 198
        on right: 193 246
    @52 (196)
        on left: 196
        on right: 197
    FUNC_ID_AS (197)
        on left: 199 200
        on right: 195
    VAR_DESIG_LIST (198)
        on left: 201 202
        on right: 197 202
    VAR_DESIG (199)
        on left: 204 205 206 207
        on right: 201 202
    $@53 (200)
        on left: 203
        on right: 204
    VAR_DESIG1 (201)
        on left: 208 210
        on right: 204
    $@54 (202)
        on left: 209
        on right: 210
    EXPRESS (203)
        on left: 211 213 215 217 219 221 223 225 227 229 231 233 235 237 239 240
        on right: 193 195 204 210 211 213 215 217 219 221 223 225 227 229 231 233 235 237 239 245 256 274 285 300 303 311 314
    $@55 (204)
        on left: 212
        on right: 213
    $@56 (205)
        on left: 214
        on right: 215
    $@57 (206)
        on left: 216
        on right: 217
    $@58 (207)
        on left: 218
        on right: 219
    $@59 (208)
        on left: 220
        on right: 221
    $@60 (209)
        on left: 222
        on right: 223
    $@61 (210)
        on left: 224
        on right: 225
    $@62 (211)
        on left: 226
        on right: 227
    $@63 (212)
        on left: 228
        on right: 229
    $@64 (213)
        on left: 230
        on right: 231
    $@65 (214)
        on left: 232
        on right: 233
    $@66 (215)
        on left: 234
        on right: 235
    $@67 (216)
        on left: 236
        on right: 237
    $@68 (217)
        on left: 238
        on right: 239
    UNARY_OP (218)
        on left: 241 242 243
        on right: 45 211
    FACTOR (219)
        on left: 245 246 247 248 250
        on right: 240
    $@69 (220)
        on left: 244
        on right: 245
    $@70 (221)
        on left: 249
        on right: 250
    PARAM_LIST (222)
        on left: 252
        on right: 250 263
    $@71 (223)
        on left: 251
        on right: 252
    ACTUAL_PARAM_L (224)
        on left: 253 255
        on right: 252 255
    $@72 (225)
        on left: 254
        on right: 255
    ACTUAL_PARAM (226)
        on left: 256 257
        on right: 253 255
    WIDTH_FIELD (227)
        on left: 258 259
        on right: 256
    PROC_STAT (228)
        on left: 260 261 263
        on right: 188
    $@73 (229)
        on left: 262
        on right: 263
    GO_TO_STAT (230)
        on left: 264
        on right: 189
    EMPTY_STAT (231)
        on left: 265
        on right: 190
    STRUCT_STAT (232)
        on left: 266 267 268
        on right: 186
    CONDIT_STAT (233)
        on left: 269 270
        on right: 267
    IF_STATEMENT (234)
        on left: 272
        on right: 269
    $@74 (235)
        on left: 271
        on right: 272
    IF_THEN_ELSE_STAT (236)
        on left: 274
        on right: 272 279
    $@75 (237)
        on left: 273
        on right: 274
    THEN_ELSE_STAT (238)
        on left: 276 279
        on right: 274
    $@76 (239)
        on left: 275
        on right: 276
    $@77 (240)
        on left: 277
        on right: 279
    $@78 (241)
        on left: 278
        on right: 279
    ELSE_STAT (242)
        on left: 280 282
        on right: 276 279
    $@79 (243)
        on left: 281
        on right: 282
    CASE_STATEMENT (244)
        on left: 285
        on right: 270
    $@80 (245)
        on left: 283
        on right: 285
    $@81 (246)
        on left: 284
        on right: 285
    CASE_EL_LIST (247)
        on left: 286 287
        on right: 285 287
    CASE_ELEMENT (248)
        on left: 288
        on right: 286 287
    CASE_LAB_LIST (249)
        on left: 289 290
        on right: 288 290
    CASE_LAB (250)
        on left: 291 292
        on right: 289 290
    END_CASE (251)
        on left: 293 294
        on right: 285
    REPETIT_STAT (252)
        on left: 295 296 297
        on right: 268
    WHILE_STATEMENT (253)
        on left: 300
        on right: 295
    $@82 (254)
        on left: 298
        on right: 300
    $@83 (255)
        on left: 299
        on right: 300
    REP_STATEMENT (256)
        on left: 303
        on right: 296
    $@84 (257)
        on left: 301
        on right: 303
    $@85 (258)
        on left: 302
        on right: 303
    FOR_STATEMENT (259)
        on left: 307
        on right: 297
    $@86 (260)
        on left: 304
        on right: 307
    $@87 (261)
        on left: 305
        on right: 307
    $@88 (262)
        on left: 306
        on right: 307
    CONTROL_VAR (263)
        on left: 308
        on right: 307
    FOR_LIST (264)
        on left: 311 314
        on right: 307
    $@89 (265)
        on left: 309
        on right: 311
    $@90 (266)
        on left: 310
        on right: 311
    $@91 (267)
        on left: 312
        on right: 314
    $@92 (268)
        on left: 313
        on right: 314


State 0

    0 $accept: • PROGRAM $end

    $default  reduce using rule 4 (DEFS)

    PROGRAM  go to state 1
    DEFS     go to state 2


State 1

    0 $accept: PROGRAM • $end

    $end  shift, and go to state 3


State 2

    3 PROGRAM: DEFS • PROGRAM_HEAD $@1 LABEL_DEC_PART CONST_DEC_PART TYPE_DEC_PART VAR_DEC_PART $@2 P_F_DEC_PART BODY
    5 DEFS: DEFS • DEF

    program_tok  shift, and go to state 4
    define_tok   shift, and go to state 5

    DEF           go to state 6
    PROGRAM_HEAD  go to state 7


State 3

    0 $accept: PROGRAM $end •

    $default  accept


State 4

   15 PROGRAM_HEAD: program_tok • undef_id_tok PROGRAM_FILE_PART ';'

    undef_id_tok  shift, and go to state 8


State 5

    6 DEF: define_tok • field_tok undef_id_tok ';'
    7    | define_tok • function_tok undef_id_tok ';'
    8    | define_tok • const_tok undef_id_tok ';'
    9    | define_tok • function_tok undef_id_tok '(' ')' ';'
   10    | define_tok • procedure_tok undef_id_tok ';'
   11    | define_tok • procedure_tok undef_id_tok '(' ')' ';'
   12    | define_tok • type_tok undef_id_tok ';'
   13    | define_tok • type_tok undef_id_tok '=' SUBRANGE_TYPE ';'
   14    | define_tok • var_tok undef_id_tok ';'

    const_tok      shift, and go to state 9
    function_tok   shift, and go to state 10
    procedure_tok  shift, and go to state 11
    type_tok       shift, and go to state 12
    var_tok        shift, and go to state 13
    field_tok      shift, and go to state 14


State 6

    5 DEFS: DEFS DEF •

    $default  reduce using rule 5 (DEFS)


State 7

    3 PROGRAM: DEFS PROGRAM_HEAD • $@1 LABEL_DEC_PART CONST_DEC_PART TYPE_DEC_PART VAR_DEC_PART $@2 P_F_DEC_PART BODY

    $default  reduce using rule 1 ($@1)

    $@1  go to state 15


State 8

   15 PROGRAM_HEAD: program_tok undef_id_tok • PROGRAM_FILE_PART ';'

    '('  shift, and go to state 16

    $default  reduce using rule 17 (PROGRAM_FILE_PART)

    PROGRAM_FILE_PART  go to state 17


State 9

    8 DEF: define_tok const_tok • undef_id_tok ';'
